kubernetes/overlays/infrastructure/infra/applications/external-secrets/network-policies/allow-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: {}
    ports: 
    - port: 10250
      protocol: TCP
